--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Um site de exemplo do módulo de CSS">
     <meta name="keywords" content="Agência Digital, CSS, HTML">
-    <title>Agência Fake</title>
+    <title>Agência De Marketing</title>
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Lobster&family=Roboto:wght@100;300;400;500;700;900&display=swap">
 </head>
@@ -129,8 +129,6 @@
         </div>
     </section>
     
-
-    <!-- Modal para mensagem de sucesso -->
     <div id="modal" class="modal">
         <div class="modal-content">
             <span class="close">&times;</span>
@@ -151,7 +149,7 @@
                 <img src="img/facebook.png" alt="Aplicativo 1" style="max-width: 50px; margin: 0 10px;">
                 <img src="img/instagram.png" alt="Aplicativo 2" style="max-width: 50px; margin: 0 10px;">
                 <img src="img/linkedin.png" alt="Aplicativo 3" style="max-width: 50px; margin: 0 10px;">
-                <!-- Adicione mais imagens se necessário -->
+    
             </div>
         </div>
         <b style="color: white;">© Todos os direitos reservados.</b>
